// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gap renders 0 1`] = `
Array [
  .c0 {
  gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  gap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders function 1`] = `
Array [
  .c0 {
  gap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  gap: has;
}

<div
    className="c0"
  />,
  .c0 {
  gap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  gap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders invalid theme path 1`] = `
Array [
  .c0 {
  gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  gap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders negative number 1`] = `
Array [
  .c0 {
  gap: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  gap: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  gap: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  gap: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  gap: July;
}

@media screen and (min-width:November) {
  .c0 {
    gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  gap: July;
}

@media screen and (min-width:November) {
  .c0 {
    gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  gap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    gap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  gap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    gap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    gap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    gap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    gap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    gap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    gap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    gap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  gap: July;
}

@media May {
  .c0 {
    gap: August;
  }
}

@media April {
  .c0 {
    gap: September;
  }
}

@media January {
  .c0 {
    gap: November;
  }
}

@media April {
  .c0 {
    gap: August;
  }
}

@media June {
  .c0 {
    gap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  gap: July;
}

@media May {
  .c0 {
    gap: August;
  }
}

@media April {
  .c0 {
    gap: September;
  }
}

@media January {
  .c0 {
    gap: November;
  }
}

@media April {
  .c0 {
    gap: August;
  }
}

@media June {
  .c0 {
    gap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  gap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    gap: November;
  }
}

@media April {
  .c0 {
    gap: January;
  }
}

@media January {
  .c0 {
    gap: December;
  }
}

@media April {
  .c0 {
    gap: April;
  }
}

@media June {
  .c0 {
    gap: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  gap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    gap: November;
  }
}

@media April {
  .c0 {
    gap: January;
  }
}

@media January {
  .c0 {
    gap: December;
  }
}

@media April {
  .c0 {
    gap: April;
  }
}

@media June {
  .c0 {
    gap: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    gap: July;
  }
}

@media April {
  .c0 {
    gap: August;
  }
}

@media January {
  .c0 {
    gap: September;
  }
}

@media April {
  .c0 {
    gap: November;
  }
}

@media June {
  .c0 {
    gap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    gap: July;
  }
}

@media April {
  .c0 {
    gap: August;
  }
}

@media January {
  .c0 {
    gap: September;
  }
}

@media April {
  .c0 {
    gap: November;
  }
}

@media June {
  .c0 {
    gap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    gap: January;
  }
}

@media April {
  .c0 {
    gap: December;
  }
}

@media January {
  .c0 {
    gap: April;
  }
}

@media April {
  .c0 {
    gap: May;
  }
}

@media June {
  .c0 {
    gap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    gap: January;
  }
}

@media April {
  .c0 {
    gap: December;
  }
}

@media January {
  .c0 {
    gap: April;
  }
}

@media April {
  .c0 {
    gap: May;
  }
}

@media June {
  .c0 {
    gap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders postitive number 1`] = `
Array [
  .c0 {
  gap: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  gap: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  gap: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  gap: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders string 1`] = `
Array [
  .c0 {
  gap: July;
}

<div
    className="c0"
  />,
  .c0 {
  gap: July;
}

<div
    className="c0"
  />,
  .c0 {
  gap: June;
}

<div
    className="c0"
  />,
  .c0 {
  gap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gap renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gap renders valid theme path 1`] = `
Array [
  .c0 {
  gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
